WebUI: add <time> tag to metadata timestamps on zettel info page
FossilOrigin-Name: dfbee9b13fdcb70dd4f610eb09eac1e69dfb9c66f660004b8851b9ee6218e394

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -11,7 +11,9 @@
 {{#CanDelete}}&#183; <a href="{{{DeleteURL}}}">Delete</a>{{/CanDelete}}
 </header>
 <h2>Interpreted Metadata</h2>
-<table>{{#MetaData}}<tr><td>{{Key}}</td><td>{{{Value}}}</td></tr>{{/MetaData}}</table>
+<table>
+{{#MetaData}}<tr><td>{{Key}}</td><td>{{{Value}}}</td></tr>
+{{/MetaData}}</table>
 <h2>References</h2>
 {{#HasLocLinks}}
 <h3>Local</h3>
