WebUI: add missing </a> tags for parsed/evaluated zettel representation URLs
FossilOrigin-Name: 1afb2aebd14e769ceec4607d46041c7f97170bc338566d18fb2529372d50e35c

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -51,7 +51,7 @@
 {{#EvalMatrix}}
 <tr>
 <th>{{Header}}</th>
-{{#Elements}}<td><a href="{{{URL}}}">{{Text}}</td>
+{{#Elements}}<td><a href="{{{URL}}}">{{Text}}</a></td>
 {{/Elements}}
 </tr>
 {{/EvalMatrix}}
@@ -61,7 +61,7 @@
 {{#ParseMatrix}}
 <tr>
 <th>{{Header}}</th>
-{{#Elements}}<td><a href="{{{URL}}}">{{Text}}</td>
+{{#Elements}}<td><a href="{{{URL}}}">{{Text}}</a></td>
 {{/Elements}}
 </tr>
 {{/ParseMatrix}}
