WebUI: initial support for storing zettel lists into a zettel
FossilOrigin-Name: e74021fbc980c3b9f3f6e5ecef30d94e4581f2bd6d37b5c163369c7030f45d3b

--- a/box/constbox/listzettel.mustache
+++ b/box/constbox/listzettel.mustache
@@ -5,3 +5,8 @@
 <input class="zs-input" type="text" placeholder="Search.." name="{{QueryKeyQuery}}" value="{{QueryValue}}">
 </form>
 {{{Content}}}
+<form action="{{{CreateURL}}}">
+<input type="hidden" name="{{QueryKeyQuery}}" value="{{QueryValue}}">
+<input type="hidden" name="{{QueryKeySeed}}" value="{{Seed}}">
+<input class="zs-primary" type="submit" value="Save As Zettel">
+</form>
