--- a/box/constbox/form.mustache
+++ b/box/constbox/form.mustache
@@ -2,7 +2,7 @@
 <header>
 <h1>{{Heading}}</h1>
 </header>
-<form method="POST" enctype="multipart/form-data">
+<form action="{{FormActionURL}}" method="POST" enctype="multipart/form-data">
 <div>
 <label for="zs-title">Title <a title="Main heading of this zettel. You can use inline zettelmarkup.">&#9432;</a></label>
 <input class="zs-input" type="text" id="zs-title" name="title" placeholder="Title.." value="{{MetaTitle}}" autofocus>
