--- a/box/constbox/listzettel.mustache
+++ b/box/constbox/listzettel.mustache
@@ -5,8 +5,8 @@
 <input class="zs-input" type="text" placeholder="Search.." name="{{QueryKeyQuery}}" value="{{QueryValue}}">
 </form>
 {{{Content}}}
-<form action="{{{CreateURL}}}">
+{{#CanCreate}}<form action="{{{CreateURL}}}">
 <input type="hidden" name="{{QueryKeyQuery}}" value="{{QueryValue}}">
 <input type="hidden" name="{{QueryKeySeed}}" value="{{Seed}}">
 <input class="zs-primary" type="submit" value="Save As Zettel">
-</form>
+</form>{{/CanCreate}}
