Remove reference to zs client package html in mustache and URL output for get_zettel
FossilOrigin-Name: 199c35b121d29719ba4e66da85430f86959778a7a33f2d2cb36fa181492f71d8

--- a/box/constbox/zettel.mustache
+++ b/box/constbox/zettel.mustache
@@ -12,7 +12,7 @@
 {{#CanFolge}}&#183; <a href="{{{FolgeURL}}}">Folge</a>{{/CanFolge}}
 {{#PredecessorRefs}}<br>Predecessor: {{{PredecessorRefs}}}{{/PredecessorRefs}}
 {{#PrecursorRefs}}<br>Precursor: {{{PrecursorRefs}}}{{/PrecursorRefs}}
-{{#HasExtURL}}<br>URL: <a href="{{{ExtURL}}}"{{{ExtNewWindow}}}>{{ExtURL}}</a>{{/HasExtURL}}
+{{#HasExtURL}}<br>URL: {{{ExtURL}}}{{/HasExtURL}}
 {{#Author}}<br>By {{Author}}{{/Author}}
 </div>
 </header>
