Remove support for runtime configuration marker-external
FossilOrigin-Name: 5c05b3023c8ee4f3ba990e4eea46b5755ffe40ee1d2094b28eac5fb3176ba26d

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -144,6 +144,7 @@
   }
   a:not([class]) { text-decoration-skip-ink: auto }
   a.broken { text-decoration: line-through }
+  a.external::after { content: "➚"; display: inline-block }
   img { max-width: 100% }
   img.right { float: right }
   ol.zs-endnotes {
