Remove support for Zettelmarkup used in title of a zettel. Now the title is just plain text
FossilOrigin-Name: 6b3192daecb6ff475b4a25039dfbdce808659302247247d60db266c2773f5c1b

--- a/box/constbox/zettel.mustache
+++ b/box/constbox/zettel.mustache
@@ -1,6 +1,6 @@
 <article>
 <header>
-<h1>{{{HTMLTitle}}}</h1>
+<h1>{{Heading}}</h1>
 <div class="zs-meta">
 {{#CanWrite}}<a href="{{{EditURL}}}">Edit</a> &#183;{{/CanWrite}}
 {{Zid}} &#183;
