--- a/box/constbox/zettel.mustache
+++ b/box/constbox/zettel.mustache
@@ -12,6 +12,7 @@
 {{#CanFolge}}&#183; <a href="{{{FolgeURL}}}">Folge</a>{{/CanFolge}}
 {{#PredecessorRefs}}<br>Predecessor: {{{PredecessorRefs}}}{{/PredecessorRefs}}
 {{#PrecursorRefs}}<br>Precursor: {{{PrecursorRefs}}}{{/PrecursorRefs}}
+{{#SuperiorRefs}}<br>Superior: {{{SuperiorRefs}}}{{/SuperiorRefs}}
 {{#HasExtURL}}<br>URL: {{{ExtURL}}}{{/HasExtURL}}
 {{#Author}}<br>By {{Author}}{{/Author}}
 </div>
@@ -20,8 +21,7 @@
 </article>
 {{#NeedBottomNav}}<nav>{{/NeedBottomNav}}
 {{#FolgeLinks.Has}}
-<details open>
-<summary>Folgezettel</summary>
+<details open><summary>Folgezettel</summary>
 <ul>
 {{#FolgeLinks.Links}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
@@ -29,9 +29,17 @@
 </ul>
 </details>
 {{/FolgeLinks.Has}}
+{{#Subordinates.Has}}
+<details open><summary>Subordinates</summary>
+<ul>
+{{#Subordinates.Links}}
+<li><a href="{{{URL}}}">{{Text}}</a></li>
+{{/Subordinates.Links}}
+</ul>
+</details>
+{{/Subordinates.Has}}
 {{#BackLinks.Has}}
-<details open>
-<summary>Incoming</summary>
+<details open><summary>Incoming</summary>
 <ul>
 {{#BackLinks.Links}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
@@ -40,8 +48,7 @@
 </details>
 {{/BackLinks.Has}}
 {{#SuccessorLinks.Has}}
-<details open>
-<summary>Successors</summary>
+<details open><summary>Successors</summary>
 <ul>
 {{#SuccessorLinks.Links}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
