Fix css error for tables in info view
FossilOrigin-Name: 56f4be0ca22202acb913f0b47055eb8745a6603e36ced8a5dfab82d290100d43

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -115,7 +115,8 @@
     max-width: 100%;
   }
   td, th {text-align: left; padding: .25em .5em;}
-  th { border-bottom: 2px solid hsl(0, 0%, 70%); font-weight: bold }
+  th { font-weight: bold }
+  thead th { border-bottom: 2px solid hsl(0, 0%, 70%) }
   td { border-bottom: 1px solid hsl(0, 0%, 85%) }
   main form {
     padding: 0 .5em;
